# MiniTournament

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  env_example  main.py  pyproject.toml  requirements.txt
app/: config.py  db.py  exeptions.py
app/api/: __init__.py  tournament.py
app/models/: __init__.py  tournament.py  user.py
app/repositories/: __init__.py  tournament.py  user.py
app/schemas/: __init__.py  tournament.py  user.py
migrations/: env.py
tests/: test_registration.py
