[tool.poetry]
name = "minitournament"
version = "0.1.0"
description = ""
authors = ["Doston <dostontv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
annotated-types = "0.7.0"
anyio = "4.9.0"
click = "8.2.1"
fastapi = "0.115.12"
h11 = "0.16.0"
idna = "3.10"
pydantic = "2.11.5"
pydantic-core = "2.33.2"
sniffio = "1.3.1"
starlette = "0.46.2"
typing-inspection = "0.4.1"
typing-extensions = "4.14.0"
uvicorn = "0.34.3"
dotenv = "^0.9.9"
sqlalchemy = "^2.0.41"
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.10"
loguru = "^0.7.3"
greenlet = "^3.2.3"
alembic = "^1.16.1"
pytest = "^8.4.0"
httpx = "^0.28.1"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
